Add CarRepository for working with DB. Also added class Car and CarValidator. Added new templates for the cars. Created init.sql for initialization DB (SQLite).

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "slim/http": "^1.4",
         "slim/php-view": "^3.4",
         "php-di/php-di": "^7.0",
-        "slim/flash": "^0.4.0"
+        "slim/flash": "^0.4.0",
+        "ext-pdo": "*"
     },
     "license": "MIT",
     "autoload": {
